deployment/app/10-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <app-name>
  labels:
    app: <app-name>
spec:
  selector:
    app: <app-name>
  ports:
    - name: http
      port: 8080
      targetPort: http
