deployment/app/30-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: <route-name>
  labels:
    app: <app-name>
spec:
  to:
    kind: Service
    name: <app-name>
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
